Adding container in HTML and CSS, LessonsNotes directory also

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,34 @@
 body {
     font-family: 'Work Sans', sans-serif;
 }
+
+.parent {
+    background-color: #eee;
+}
+
+.container {
+    margin: 0px auto;
+    background-color: #ccc;
+    padding: 0px 15px;
+}
+
+/* Small Screens */
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
+}
+
+/* Medium Screens */
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
+}
+
+/* Large Screens */
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
+}
