Improve some things in the code

--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,20 @@
     box-sizing: border-box;
 }
 
-:root {
-    --main-color: #4a8cbe;
-}
-
 body {
     font-family: 'Work Sans', sans-serif;
 }
 
+:root {
+    --main-color: #10cab7;
+    --tem-color: #4a8cbe;
+}
+
+/* Start of Container and its diffrent scales*/
+
 .container {
+    padding: 0 15px;
     margin: 0px auto;
-    padding: 0px 15px;
 }
 
 /* Small Screens */
@@ -38,7 +41,10 @@ body {
     }
 }
 
-/* Start Header */
+/* End of Container */
+
+/* Start of header styling */
+
 .header {
     padding: 20px;
 }
@@ -49,82 +55,82 @@ body {
     align-items: center;
 }
 
-.header .logo {
+.header .container img {
     width: 60px;
 }
 
-.header .links {
+.header .container .links {
     position: relative;
 }
 
-.header .links .icon:hover span:nth-child(2) {
-    width: 100%;
-}
-
-.header .links .icon {
+.header .container .links .icon {
     width: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
 }
 
-.header .links .icon span {
+.header .container .links .icon span {
     width: 100%;
     height: 2px;
     background-color: #333;
     margin-bottom: 5px;
 }
 
-.header .links .icon span:nth-child(2) {
+.header .container .links .icon:hover span:nth-last-child(2) {
+    width: 100%;
+}
+
+.header .container .links .icon span:nth-last-child(2) {
     width: 50%;
     transition-duration: .3s;
 }
 
-.header .container .links:hover ul {
-    display: block;
-}
-
 .header .container .links ul {
     list-style: none;
-    margin: 0;
     padding: 0;
-    background: #f4f1f1;
+    margin: 0;
+    background-color: #f4f1f1;
+    min-width: 200px;
     position: absolute;
     right: 0;
     top: 100%;
-    min-width: 200px;
     border: 1px solid #ccc;
     border-radius: 3px;
     display: none;
     z-index: 1;
 }
 
+.header .container .links:hover ul {
+    display: block;
+}
+
 .header .container .links ul li a {
-    text-decoration: none;
     display: block;
     padding: 15px;
+    text-decoration: none;
     color: #333;
+    border: 1px solid #ccc;
     font-size: 18px;
-    transition: .3s;
+    transition: .3;
 }
 
 .header .container .links ul li a:hover {
     padding-left: 25px;
+    color: var(--tem-color);
 }
 
-.header .container .links ul li {
-    border-bottom: 1px solid #ccc;
-}
+/* End of header styling */
 
-/* End Header */
+/* Start of landing space styling */
 
-/* Start Landing-Space */
 .landing-space {
     background-image: url(../images/landing.jpg);
     background-size: cover;
     height: calc(100vh - 64px);
     position: relative;
 }
+
 
 .landing-space .intro-text {
     position: absolute;
@@ -136,21 +142,23 @@ body {
 }
 
 .landing-space .intro-text h3 {
-    font-size: 34px;
     margin: 0;
+    font-size: 34px;
+    text-transform: capitalize;
     color: var(--main-color);
 }
 
-.landing-space .landing-space p {
-    font-size: 18px;
+.landing-space .intro-text p {
+    line-height: 1.4;
 }
 
-/* End Landing-Space */
+/* End of landing space styling */
 
-/* Start Features Section   */
+/* Start of features section styling */
+
 .features {
-    padding: 60px 0;
     background-color: #f4f1f1;
+    padding: 60px 0;
 }
 
 .features .container {
@@ -160,26 +168,26 @@ body {
 }
 
 .features .container .feat {
-    padding: 20px;
     text-align: center;
     border: 1px solid #ccc;
+    padding: 20px;
     border-radius: 3px;
 }
 
 .features .container .feat i {
-    font-size: 40px;
+    font-size: 35px;
     color: var(--main-color);
+    margin-top: 10px;
 }
-
 
 .features .container .feat h3 {
     font-weight: 800;
-    font-size: 22px;
     margin: 30px 0;
 }
 
 .features .container .feat p {
     color: #777;
+    line-height: 1.4;
 }
 
-/* End Features Section   */
+/* End of features section styling */
