--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body {
     font-family: 'Work Sans', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root {
     --main-color: #10cab7;
     --tem-color: #325976;
